# dotenv-diff

./: .gitignore  README.md  pyproject.toml
examples/: .env.local  .env.production  .env.staging
src/dotenv_diff/: cli.py  core.py  output.py  utils.py
src/envdiff/: cli.py  core.py  main.py  output.py
