[project]
name = "dotenv-diff"
version = "0.1.0"
authors = [{ name = "Lucas Bringsken", email = "kontakt@lucasbringsken.de" }]
description = "Lightweight tool for quickly spotting missing keys and differing values in .env files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pandas>=3.0.0", "rich>=14.3.2", "typer>=0.21.1"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
dotenv-diff = "dotenv_diff.cli:app"

[build-system]
requires = ["uv_build >= 0.9.28, <0.10.0"]
build-backend = "uv_build"


[dependency-groups]
dev = ["black>=26.1.0", "ruff>=0.15.0"]
