[project]
name = "dotenv-diff"
version = "0.1.1"
authors = [{ name = "Lucas Bringsken", email = "kontakt@lucasbringsken.de" }]
description = "Lightweight tool for quickly spotting missing keys and differing values in .env files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13", "typer>=0.9"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
dotenv-diff = "dotenv_diff.cli:app"

[build-system]
requires = ["uv_build >= 0.9.28, <0.10.0"]
build-backend = "uv_build"


[dependency-groups]
dev = ["black>=26.1.0", "ruff>=0.15.0"]
